--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.profiles.active=prod
 
-server.port=8081
+
+notificador.email.host-servidor=smtp.algafood.com.br
+notificador.email.porta-servidor=28
