--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.url=jdbc:mysql://localhost/algafood?createDatabaseIfNotExist=t
 spring.datasource.username=root
 spring.datasource.password=root
 
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
