Adicionando dados de testes com callback do Flyway e Reparando migrações com erros

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,15 +2,20 @@ spring.datasource.url=jdbc:mysql://localhost/algafood?createDatabaseIfNotExist=t
 spring.datasource.username=root
 spring.datasource.password=root
 
+#GERA AS TABELAS APARTIR DAS ENTIDADES MAPIADAS:
 #spring.jpa.generate-ddl=true
 #spring.jpa.hibernate.ddl-auto=create
 
+#GERA O SCRIPT DAS TABELAS APARTIR DAS ENTIDADES MAPIADAS E POE EM UM ARQUIVO:
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=src/main/resources/ddl.sql
+
+spring.flyway.locations=classpath:db/migration, classpath:db/testdata
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 
+#ALTERA CONFIGURAÇÃO DE POOL DE CONEXÕES
 #spring.datasource.hikari.maximum-pool-size=5
 #spring.datasource.hikari.minimum-idle=3
 #spring.datasource.hikari.idle-timeout=10000
