--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 #spring.datasource.hikari.maximum-pool-size=5
 #spring.datasource.hikari.minimum-idle=3
 #spring.datasource.hikari.idle-timeout=10000
+
+#LANCA EXCECAO QUANDO É PASSADO PROPERTIES QUE N EXISTEM 
+spring.jackson.deserialization.fail-on-unknown-properties=true
+#LANCA EXCECAO QUANDO É PASSADO PROPERTIES QUE ESTAO MARCADAS COM @JSONIGNORE
+spring.jackson.deserialization.fail-on-ignored-properties=true
