--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 spring.jackson.deserialization.fail-on-unknown-properties=true
 #LANCA EXCECAO QUANDO É PASSADO PROPERTIES QUE ESTAO MARCADAS COM @JSONIGNORE
 spring.jackson.deserialization.fail-on-ignored-properties=true
+
+#LANCA EXCECAO QUANDO NÃO EXISTE CÓDIGO MAPEADO PARA TAL URL 
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.resources.add-mappings=false
