Estratégias de nomes de propriedades: snake case ou lower camel case

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,16 +15,19 @@ spring.flyway.locations=classpath:db/migration, classpath:db/testdata
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 
-#ALTERA CONFIGURAÇÃO DE POOL DE CONEXÕES
+#ALTERA CONFIGURAï¿½ï¿½O DE POOL DE CONEXï¿½ES
 #spring.datasource.hikari.maximum-pool-size=5
 #spring.datasource.hikari.minimum-idle=3
 #spring.datasource.hikari.idle-timeout=10000
 
-#LANCA EXCECAO QUANDO É PASSADO PROPERTIES QUE N EXISTEM 
+#LANCA EXCECAO QUANDO ï¿½ PASSADO PROPERTIES QUE N EXISTEM 
 spring.jackson.deserialization.fail-on-unknown-properties=true
-#LANCA EXCECAO QUANDO É PASSADO PROPERTIES QUE ESTAO MARCADAS COM @JSONIGNORE
+#LANCA EXCECAO QUANDO ï¿½ PASSADO PROPERTIES QUE ESTAO MARCADAS COM @JSONIGNORE
 spring.jackson.deserialization.fail-on-ignored-properties=true
 
-#LANCA EXCECAO QUANDO NÃO EXISTE CÓDIGO MAPEADO PARA TAL URL 
+#LANCA EXCECAO QUANDO Nï¿½O EXISTE Cï¿½DIGO MAPEADO PARA TAL URL 
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.resources.add-mappings=false
+
+#EstratÃ©gias de nomes de propriedades: snake case ou lower camel case
+#spring.jackson.property-naming-strategy=SNAKE_CASE
