--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,8 @@
 		<java.version>12</java.version>
 		<modelmapper.version>2.3.0</modelmapper.version>
 		<squiggly.version>1.3.18</squiggly.version>
+		<jasperreports.version>6.10.0</jasperreports.version>
+
 	</properties>
 
 	<dependencies>
@@ -76,6 +78,16 @@
 			<groupId>com.github.bohnman</groupId>
 			<artifactId>squiggly-filter-jackson</artifactId>
 			<version>${squiggly.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>net.sf.jasperreports</groupId>
+			<artifactId>jasperreports</artifactId>
+			<version>${jasperreports.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>net.sf.jasperreports</groupId>
+			<artifactId>jasperreports-functions</artifactId>
+			<version>${jasperreports.version}</version>
 		</dependency>
 
 	</dependencies>
