--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,3 +31,8 @@ spring.resources.add-mappings=false
 
 #Estratégias de nomes de propriedades: snake case ou lower camel case
 #spring.jackson.property-naming-strategy=SNAKE_CASE
+
+#Altera o tamanho máximo de upload de arquivos
+#spring.servlet.multipart.max-file-size=20KB
+#Altera o tamanho máximo do request
+#spring.servlet.multipart.max-request-size=20MB
