--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,3 +36,7 @@ spring.resources.add-mappings=false
 #spring.servlet.multipart.max-file-size=20KB
 #Altera o tamanho máximo do request
 #spring.servlet.multipart.max-request-size=20MB
+
+
+#armazenagem local
+algafood.storage.local.diretorio-fotos=/Users/yuri.fernando.silva/Desktop/catalogo
