Servindo arquivos de fotos pela API

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,4 +39,4 @@ spring.resources.add-mappings=false
 
 
 #armazenagem local
-algafood.storage.local.diretorio-fotos=/Users/yuri.fernando.silva/Downloads/catalogo
+algafood.storage.local.diretorio-fotos=/Users/Public/catalogo
