--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,10 +40,12 @@ spring.resources.add-mappings=false
 
 #Armazenagem de fotos local
 algafood.storage.local.diretorio-fotos=/Users/Public/catalogo
-
 #Configuração Amazon S3
 #algafood.storage.s3.id-chave-acesso=
 #algafood.storage.s3.chave-acesso-secreta=
 algafood.storage.s3.bucket=algafood-storage-test
 algafood.storage.s3.regiao=us-east-2
 algafood.storage.s3.diretorio-fotos=catalogo
+
+#Configurar qual storage usar - local ou s3
+algafood.storage.tipo=s3
