Conhecendo soluções para envio de e-mails transacionais - exemplos de serviços com servidores SMTP : Amazon Simple Email Service, MailDrill, Mailgun, SendGrid e Configurando o projeto para envio de e-mails usando servidor SMTP

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -48,4 +48,12 @@ algafood.storage.s3.regiao=us-east-2
 algafood.storage.s3.diretorio-fotos=catalogo
 
 #Configurar qual storage usar - local ou s3
-algafood.storage.tipo=s3
+algafood.storage.tipo=local
+
+#Configurar o servidor SMTP de emails
+spring.mail.host=smtp.sendgrid.net
+spring.mail.port=587
+spring.mail.username=apikey
+#spring.mail.password=
+
+
