Implementando o serviço de infraestrutura de envio de e-mails com Spring (JavaMailSender), @Validated - validar a classe anotada caso tenha alguma anotção do Bean validation ex: @NotNull em remetente., @ConfigurationProperties("algafood.email") para configurar as propriedades de email

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -48,12 +48,15 @@ algafood.storage.s3.regiao=us-east-2
 algafood.storage.s3.diretorio-fotos=catalogo
 
 #Configurar qual storage usar - local ou s3
-algafood.storage.tipo=local
+algafood.storage.tipo=s3
 
 #Configurar o servidor SMTP de emails
 spring.mail.host=smtp.sendgrid.net
 spring.mail.port=587
 spring.mail.username=apikey
 #spring.mail.password=
+
+#Configurações de email
+algafood.email.remetente=Alfafood <naoresponder@algafood.com.br>
 
 
