Formatando valores monetários com FTL - ?string.currency + spring.freemarker.settings.locale

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -56,7 +56,10 @@ spring.mail.port=587
 spring.mail.username=apikey
 #spring.mail.password=
 
-#Configurações de email
+#Configuraï¿½ï¿½es de email
 algafood.email.remetente=Alfafood <naoresponder@algafood.com.br>
 
+
+#FreeMarker
+spring.freemarker.settings.locale=pt_BR
 
