Gerando a documentação da API em HTML com Swagger UI e SpringFox - WebMvcConfigurer localhost:8080/swagger-ui.html

--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,12 @@
 			<artifactId>springfox-swagger2</artifactId>
 			<version>${spring-fox.version}</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>${spring-fox.version}</version>
+		</dependency>
 	</dependencies>
 
 	<build>
