Adicionando o Spring HATEOAS no projeto

--- a/pom.xml
+++ b/pom.xml
@@ -131,17 +131,22 @@
 			<artifactId>springfox-swagger2</artifactId>
 			<version>${spring-fox.version}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>${spring-fox.version}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-bean-validators</artifactId>
 			<version>${spring-fox.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-hateoas</artifactId>
 		</dependency>
 		
 	</dependencies>
