Criando uma conta no Loggly: serviço de gerenciamento de logs na nuvem

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,8 +41,8 @@ spring.resources.add-mappings=false
 #Armazenagem de fotos local
 algafood.storage.local.diretorio-fotos=/Users/Public/catalogo
 #Configuracao Amazon S3
-#algafood.storage.s3.id-chave-acesso=
-#algafood.storage.s3.chave-acesso-secreta=
+#algafood.storage.s3.id-chave-acesso=por_no_open_config
+#algafood.storage.s3.chave-acesso-secreta=por_no_open_config
 algafood.storage.s3.bucket=algafood-storage-test
 algafood.storage.s3.regiao=us-east-2
 algafood.storage.s3.diretorio-fotos=catalogo
@@ -54,7 +54,7 @@ algafood.storage.tipo=s3
 spring.mail.host=smtp.sendgrid.net
 spring.mail.port=587
 spring.mail.username=apikey
-#spring.mail.password=
+#spring.mail.password=por_no_open_config
 
 #Configuracoes de email
 algafood.email.remetente=Alfafood <naoresponder@algafood.com.br>
@@ -66,4 +66,7 @@ spring.freemarker.settings.locale=pt_BR
 
 #Comprimindo as respostas HTTP com Gzip
 server.compression.enabled=true
+
+#Loggly - serviço de gerenciamento de logs na nuvem
+#logging.loggly.token=por_no_open_config
 
