--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
 		<jasperreports.version>6.10.0</jasperreports.version>
 		<aws-java-sdk-s3.version>1.11.671</aws-java-sdk-s3.version>
 		<spring-fox.version>2.9.2</spring-fox.version>
+		<logback-ext-loggly.version>0.1.5</logback-ext-loggly.version>
 
 	</properties>
 
@@ -130,7 +131,7 @@
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger2</artifactId>
 			<version>${spring-fox.version}</version>
-			
+
 			<exclusions>
 				<exclusion>
 					<groupId>org.springframework.plugin</groupId>
@@ -149,7 +150,7 @@
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-bean-validators</artifactId>
 			<version>${spring-fox.version}</version>
-			
+
 			<exclusions>
 				<exclusion>
 					<groupId>org.springframework.plugin</groupId>
@@ -161,6 +162,12 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-hateoas</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.logback-extensions</groupId>
+			<artifactId>logback-ext-loggly</artifactId>
+			<version>${logback-ext-loggly.version}</version>
 		</dependency>
 
 	</dependencies>
