Adicionando segurança na API com Spring Security - Authorization - Basic (user:senha - em base64)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -70,3 +70,7 @@ server.compression.enabled=true
 #Loggly - serviço de gerenciamento de logs na nuvem
 #logging.loggly.token=por_no_open_config
 
+spring.security.user.name=algafood
+spring.security.user.password=123456
+
+
