Configurando o Resource Server com a nova stack do Spring Security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -70,5 +70,8 @@ server.compression.enabled=true
 #Loggly - serviço de gerenciamento de logs na nuvem
 #logging.loggly.token=por_no_open_config
 
-
+#Configuracao do Authorization Server
+spring.security.oauth2.resourceserver.opaquetoken.introspection-uri=http://localhost:8081/oauth/check_token
+spring.security.oauth2.resourceserver.opaquetoken.client-id=checktoken
+spring.security.oauth2.resourceserver.opaquetoken.client-secret=check123
 
