Configurando o Resource Server para JWT assinado com chave simétrica

--- a/pom.xml
+++ b/pom.xml
@@ -24,8 +24,7 @@
 		<aws-java-sdk-s3.version>1.11.671</aws-java-sdk-s3.version>
 		<spring-fox.version>2.9.2</spring-fox.version>
 		<logback-ext-loggly.version>0.1.5</logback-ext-loggly.version>
-		<oauth2-oidc-sdk.version>6.21.2</oauth2-oidc-sdk.version>
-
+		<!-- <oauth2-oidc-sdk.version>6.21.2</oauth2-oidc-sdk.version>  -->
 	</properties>
 
 	<dependencies>
@@ -187,11 +186,13 @@
 			</artifactId>
 		</dependency>
 
+<!-- 
 		<dependency>
 			<groupId>com.nimbusds</groupId>
 			<artifactId>oauth2-oidc-sdk</artifactId>
 			<version>${oauth2-oidc-sdk.version}</version>
 		</dependency>
+ -->
 	</dependencies>
 
 	<build>
