--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -67,11 +67,13 @@ spring.freemarker.settings.locale=pt_BR
 #Comprimindo as respostas HTTP com Gzip
 server.compression.enabled=true
 
-#Loggly - serviço de gerenciamento de logs na nuvem
+#Loggly - serviï¿½o de gerenciamento de logs na nuvem
 #logging.loggly.token=por_no_open_config
 
 #Configuracao do Authorization Server
-spring.security.oauth2.resourceserver.opaquetoken.introspection-uri=http://localhost:8081/oauth/check_token
-spring.security.oauth2.resourceserver.opaquetoken.client-id=checktoken
-spring.security.oauth2.resourceserver.opaquetoken.client-secret=check123
+#spring.security.oauth2.resourceserver.opaquetoken.introspection-uri=http://localhost:8081/oauth/check_token
+#spring.security.oauth2.resourceserver.opaquetoken.client-id=checktoken
+#spring.security.oauth2.resourceserver.opaquetoken.client-secret=check123
 
+# Log de debbug
+#logging.level.org.springframework=DEBUG
