Configurando a validação de JWT no Resource Server com a chave pública

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -77,3 +77,6 @@ server.compression.enabled=true
 
 # Log de debbug
 #logging.level.org.springframework=DEBUG
+
+#JWT Chave public - Metodo assimetrico
+spring.security.oauth2.resourceserver.jwt.public-key-location=classpath:keys/algafood-pkey.pem
