--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,9 @@
 		<aws-java-sdk-s3.version>1.11.671</aws-java-sdk-s3.version>
 		<spring-fox.version>2.9.2</spring-fox.version>
 		<logback-ext-loggly.version>0.1.5</logback-ext-loggly.version>
-		<!-- <oauth2-oidc-sdk.version>6.21.2</oauth2-oidc-sdk.version>  -->
+		<!-- <oauth2-oidc-sdk.version>6.21.2</oauth2-oidc-sdk.version> -->
+		<spring-security-oauth2.version>2.3.7.RELEASE</spring-security-oauth2.version>
+		<spring-security-jwt.version>1.0.11.RELEASE</spring-security-jwt.version>
 	</properties>
 
 	<dependencies>
@@ -186,13 +188,25 @@
 			</artifactId>
 		</dependency>
 
-<!-- 
-		<dependency>
-			<groupId>com.nimbusds</groupId>
-			<artifactId>oauth2-oidc-sdk</artifactId>
+		<!-- 
+		<dependency> 
+			<groupId>com.nimbusds</groupId> 
+			<artifactId>oauth2-oidc-sdk</artifactId> 
 			<version>${oauth2-oidc-sdk.version}</version>
+		</dependency> 
+		-->
+
+		<dependency>
+			<groupId>org.springframework.security.oauth</groupId>
+			<artifactId>spring-security-oauth2</artifactId>
+			<version>${spring-security-oauth2.version}</version>
 		</dependency>
- -->
+
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-jwt</artifactId>
+			<version>${spring-security-jwt.version}</version>
+		</dependency>
 	</dependencies>
 
 	<build>
