--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -79,7 +79,10 @@ server.compression.enabled=true
 #logging.level.org.springframework=DEBUG
 
 #JWT Chave public - Metodo assimetrico
-spring.security.oauth2.resourceserver.jwt.public-key-location=classpath:keys/algafood-pkey.pem
+#spring.security.oauth2.resourceserver.jwt.public-key-location=classpath:keys/algafood-pkey.pem
+
+#JWKSet
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8080/.well-known/jwks.json
 
 #JWT KeyStore - AUTHORIZATION SERVER
 algafood.jwt.keystore.jks-location=classpath:keys/algafood.jks
