Construindo a imagem Docker pelo Maven - docker image -Pdocker

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
 		<!-- <oauth2-oidc-sdk.version>6.21.2</oauth2-oidc-sdk.version> -->
 		<spring-security-oauth2.version>2.3.7.RELEASE</spring-security-oauth2.version>
 		<spring-security-jwt.version>1.0.11.RELEASE</spring-security-jwt.version>
+		<dockerfile-maven-version>1.4.13</dockerfile-maven-version>
 	</properties>
 
 	<dependencies>
@@ -188,13 +189,8 @@
 			</artifactId>
 		</dependency>
 
-		<!-- 
-		<dependency> 
-			<groupId>com.nimbusds</groupId> 
-			<artifactId>oauth2-oidc-sdk</artifactId> 
-			<version>${oauth2-oidc-sdk.version}</version>
-		</dependency> 
-		-->
+		<!-- <dependency> <groupId>com.nimbusds</groupId> <artifactId>oauth2-oidc-sdk</artifactId> 
+			<version>${oauth2-oidc-sdk.version}</version> </dependency> -->
 
 		<dependency>
 			<groupId>org.springframework.security.oauth</groupId>
@@ -207,7 +203,7 @@
 			<artifactId>spring-security-jwt</artifactId>
 			<version>${spring-security-jwt.version}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
@@ -225,5 +221,35 @@
 			</plugin>
 		</plugins>
 	</build>
+
+	<profiles>
+		<profile>
+			<id>docker</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>com.spotify</groupId>
+						<artifactId>dockerfile-maven-plugin</artifactId>
+						<version>${dockerfile-maven-version}</version>
+						<executions>
+							<execution>
+								<id>default</id>
+								<goals>
+									<goal>build</goal>
+									<goal>push</goal>
+								</goals>
+							</execution>
+						</executions>
+						<configuration>
+							<repository>algafood-api</repository>
+							<buildArgs>
+								<JAR_FILE>${project.build.finalName}.jar</JAR_FILE>
+							</buildArgs>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 
 </project>
