--- a/pom.xml
+++ b/pom.xml
@@ -18,12 +18,12 @@
 
 	<properties>
 		<java.version>12</java.version>
-		<modelmapper.version>2.3.0</modelmapper.version>
+		<modelmapper.version>2.4.1</modelmapper.version>
 		<squiggly.version>1.3.18</squiggly.version>
-		<jasperreports.version>6.10.0</jasperreports.version>
 		<aws-java-sdk-s3.version>1.11.671</aws-java-sdk-s3.version>
 		<spring-fox.version>2.9.2</spring-fox.version>
 		<logback-ext-loggly.version>0.1.5</logback-ext-loggly.version>
+		<jasperreports.version>6.18.1</jasperreports.version>
 		<!-- <oauth2-oidc-sdk.version>6.21.2</oauth2-oidc-sdk.version> -->
 		<spring-security-oauth2.version>2.3.7.RELEASE</spring-security-oauth2.version>
 		<spring-security-jwt.version>1.0.11.RELEASE</spring-security-jwt.version>
@@ -67,6 +67,7 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
+			<version>1.18.20</version>
 		</dependency>
 
 		<dependency>
@@ -225,7 +226,7 @@
 	<profiles>
 		<profile>
 			<id>docker</id>
-			
+
 			<build>
 				<plugins>
 					<plugin>
