--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,8 @@ services:
       - algafood-network
       
   algafood-api:
-    build: .
     image: algafood-api
+    command: ["/wait-for-it.sh","algafood-mysql:3306","-t", "30","--","java","-jar","api.jar"]
     environment:
       DB_HOST: algafood-mysql
     ports: 
