--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 	<description>API de delivery de comida</description>
 
 	<properties>
-		<java.version>12</java.version>
+		<java.version>11</java.version>
 		<modelmapper.version>2.4.1</modelmapper.version>
 		<squiggly.version>1.3.18</squiggly.version>
 		<aws-java-sdk-s3.version>1.11.671</aws-java-sdk-s3.version>
@@ -208,6 +208,16 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.session</groupId>
+			<artifactId>spring-session-data-redis</artifactId>
 		</dependency>
 	</dependencies>
 
