--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,8 @@ spring.flyway.locations=classpath:db/migration, classpath:db/testdata
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 
+spring.session.store-type=none
+
 #ALTERA CONFIGURACAO DE POOL DE CONEXOES
 #spring.datasource.hikari.maximum-pool-size=5
 #spring.datasource.hikari.minimum-idle=3
